# support

./: README.md  pyproject.toml
support_ai/support_ai/: asgi.py  settings.py  urls.py  wsgi.py
support_ai/tickets/: urls.py  views.py
support_ai/tickets/services/: classifier.py  resolver.py  workflow.py
support_ai/tickets/tests/: test_classifier.py  test_resolver.py  test_workflow.py
